# rascam

./: DESCRIPTION.rst  README.md  pyproject.toml  setup.py
doc/: User_Software_Manuals.md  example_readme.md  example_readme.txt  google_upload.md  rascam_api.md  samba.md
docs/: requirements.txt
docs/source/: burn_raspberry_pi_os_system.rst  check_photos.rst  component_list_and_assembly_instructions.rst  conf.py  connect_the_raspberry_pi_to_the_internet.rst  diy_function.rst  get_the_ip_address.rst  go_to_play.rst  index.rst  initialize_the_environment.rst  mount_photo_album_to_ios.rst  mount_photo_album_to_windows.rst  power_on.rst  ready_to_play.rst  remote_control.rst  start_on_boot.rst  take_a_photo.rst
docs/source/media/: 10.HHHH.AI  11.5.HH.AI  12.H2.ai  13.H2.ai  14.H2.ai  15.H.ai  16.H2.psd  17.H.ai  19.H.ai  2.H.ai  20.AA.AI  20.BB.AI  3.H5.ai  3p sh1.0 to male2.54.ai  4.H.ai  4p xh1.0 to male 2.54.ai  4p xh1.0.ai  5.D5.ai  5p sh1.0 to xh2.54.ai  6.H2.ai  7.A.D.ai  8.A.D3.ai  9.H3.ai  FFC Cable 2.ai  M2.5x6.ai  M2.5x8.ai  (+20 more)
example/: add_content_on_screen.py  calibrate_camera_imu.py  countdown_photo.py  flash_light_camera.py  human_face_detect.py  make_time_lapse_video.py  photo_effect.py  pwm_control.py  screen_brightness_control.py  show_and_change_camera_setting.py  take_picture.py  take_picture_and_upload.py  time-lapse-shot.py
example/web_control/: google_upload.py  index.html  start_server.py
rascam/: __init__.py  adc.py  color.py  filedb.py  google_upload.py  i2c.py  pin.py  pwm.py  rascam_lib.py  rgb_matrix.py  sh3001.py  tft_screen.py  utils.py
(+8 files in other folders)
